--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,9 +19,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
-            android:layout_marginBottom="18dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/round_solid"
-            app:layout_constraintBottom_toTopOf="@+id/searchClassNewHome"
+            app:layout_constraintBottom_toTopOf="@id/btnBack"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
@@ -119,10 +119,10 @@
             android:layout_height="30dp"
             android:layout_marginStart="24dp"
             android:fontFamily="sans-serif-medium"
-            android:text="Total QR Scans (Today)"
+            android:text="Today's QR Scans"
             android:textColor="@color/navy"
             android:textSize="18dp"
-            app:layout_constraintBottom_toTopOf="@+id/horiScroll"
+            app:layout_constraintBottom_toTopOf="@+id/constraintLayout63"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
@@ -131,44 +131,21 @@
             android:layout_height="30dp"
             android:layout_marginStart="24dp"
             android:fontFamily="sans-serif-medium"
-            android:text="Most Recent Scans"
+            android:text="All Scans"
             android:textColor="@color/navy"
             android:textSize="18dp"
             app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <Button
-            android:id="@+id/searchClassNewHome"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="24dp"
-            android:background="@drawable/round_solid"
-            android:drawableLeft="@drawable/icons_group"
-            android:drawablePadding="200000dp"
-            android:drawableTint="@color/light_b"
-            android:fontFamily="sans-serif-medium"
-            android:gravity="right|center"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp"
-            android:text="Find Scan Records by Class"
-            android:textAllCaps="false"
-            android:textColor="@color/light_b"
-            android:textSize="16sp"
-            android:theme="@style/solidBtn"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
 
         <HorizontalScrollView
             android:id="@+id/horiScroll"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@id/textView8"
-            tools:layout_editor_absoluteY="53dp">
+            >
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -179,13 +156,13 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/constraintLayout5"
                     android:layout_width="wrap_content"
-                    android:layout_height="100dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
+                    android:paddingVertical="5dp"
 
                     android:background="@drawable/round_hollow"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:layout_editor_absoluteY="16dp">
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
                         android:id="@+id/totalSignIn"
@@ -196,9 +173,9 @@
                         android:paddingLeft="10dp"
                         android:text="00"
                         android:textColor="@color/white"
-                        android:textSize="55dp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        tools:layout_editor_absoluteY="42dp" />
+                        android:textSize="40sp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"/>
 
                     <TextView
                         android:id="@+id/textViewin"
@@ -209,22 +186,22 @@
                         android:paddingLeft="10dp"
                         android:text="Login\nScans"
                         android:textColor="@color/white"
-                        android:textSize="20dp"
-                        app:layout_constraintStart_toEndOf="@+id/totalSignIn"
-                        tools:layout_editor_absoluteY="19dp" />
+                        android:textSize="18sp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/totalSignIn"/>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/constraintLayout6"
                     android:layout_width="wrap_content"
-                    android:layout_height="100dp"
-                    android:layout_marginStart="24dp"
-
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:paddingVertical="5dp"
                     android:background="@drawable/round_hollow"
                     app:layout_constraintStart_toEndOf="@+id/constraintLayout5"
                     app:layout_constraintTop_toTopOf="parent"
-
-                    tools:layout_editor_absoluteY="12dp">
+                    >
 
                     <TextView
                         android:id="@+id/totalSignOut"
@@ -235,9 +212,8 @@
                         android:paddingLeft="10dp"
                         android:text="00"
                         android:textColor="@color/white"
-                        android:textSize="55dp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        tools:layout_editor_absoluteY="42dp" />
+                        android:textSize="40sp"
+                        app:layout_constraintStart_toStartOf="parent" />
 
                     <TextView
                         android:id="@+id/textViewout"
@@ -249,16 +225,17 @@
 
                         android:text="Logout\nScans"
                         android:textColor="@color/white"
-                        android:textSize="20dp"
+                        android:textSize="18sp"
                         app:layout_constraintStart_toEndOf="@+id/totalSignOut"
-                        tools:layout_editor_absoluteY="19dp" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/asd2"
                     android:layout_width="50dp"
-                    android:layout_height="20dp"
+                    android:layout_height="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="@id/constraintLayout5"
                     app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">
@@ -277,6 +254,91 @@
 
 
         </HorizontalScrollView>
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout63"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginBottom="20dp"
+            android:paddingVertical="5dp"
+            android:paddingRight="20dp"
+            android:background="@drawable/round_hollow"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/horiScroll"
+            >
+
+            <TextView
+                android:id="@+id/CurrentLogins"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dp"
+                android:text="00"
+                android:textColor="@color/white"
+                android:textSize="40sp"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/textViewCurr"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:fontFamily="sans-serif-black"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dp"
+
+                android:text="Currently\nLogged in"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                app:layout_constraintStart_toEndOf="@+id/CurrentLogins"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/btnBack"
+            android:layout_width="65dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/round_solid"
+            android:drawableRight="@drawable/baseline_arrow_back_ios_24"
+            android:drawablePadding="200000dp"
+            android:drawableTint="@color/light_b"
+            android:fontFamily="sans-serif"
+            android:gravity="left|center"
+            android:paddingLeft="20dp"
+            android:text=""
+            android:textAllCaps="false"
+            android:textColor="@color/light_b"
+            android:textSize="20dp"
+            android:theme="@style/solidBtn"
+            app:layout_constraintLeft_toLeftOf="@id/constraintLayout3"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+        <Button
+            android:id="@+id/btnForw"
+            android:layout_width="65dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/round_solid"
+            android:drawableRight="@drawable/baseline_arrow_forward_ios_24"
+            android:drawablePadding="200000dp"
+            android:drawableTint="@color/light_b"
+            android:fontFamily="sans-serif"
+            android:gravity="left|center"
+            android:paddingLeft="20dp"
+            android:text=""
+            android:textAllCaps="false"
+            android:textColor="@color/light_b"
+            android:textSize="20dp"
+            android:theme="@style/solidBtn"
+            app:layout_constraintRight_toRightOf="@id/constraintLayout3"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
