--- a/app/src/main/res/layout/list_items_dashb_new.xml
+++ b/app/src/main/res/layout/list_items_dashb_new.xml
@@ -9,13 +9,14 @@
     <TextView
         android:id="@+id/tvNameDashNew"
         android:layout_width="200dp"
-        android:layout_height="24dp"
+        android:layout_height="20dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="-5dp"
+        android:fontFamily="sans-serif-black"
         android:gravity="start|center_vertical"
         android:text="Name"
-        android:textSize="16sp"
         android:textColor="@color/black"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvIDDashNew" />
 
@@ -62,7 +63,7 @@
         android:id="@+id/tvOutDashNew"
         android:layout_width="wrap_content"
         android:layout_height="24dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="-5dp"
         android:layout_marginEnd="4dp"
         android:gravity="start|center_vertical"
         android:text="OUT"
